<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShelfDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnBackShelves"
                    android:layout_width="@dimen/margin_xlarge"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_chevron_left_black_24dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnShelfDetailOption"
                    android:layout_width="@dimen/margin_large"
                    android:layout_height="match_parent"
                    android:src="@drawable/menu"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_large"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/llEtShelfDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBar"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etShelfNameShelfDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:layout_marginEnd="@dimen/margin_medium_3"
                android:hint="Enter Your Shelf Name"
                android:imeOptions="actionDone"
                android:includeFontPadding="true"
                android:maxLength="50"
                android:visibility="gone"
                android:paddingTop="@dimen/margin_medium_2"
                android:paddingBottom="@dimen/margin_medium_2"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShelfNameShelfDetail"
                android:layout_width="match_parent"
                tools:text="Historical Books"
                android:layout_marginStart="@dimen/margin_medium_3"
                android:layout_marginTop="@dimen/margin_xxlarge"
                android:layout_marginEnd="@dimen/margin_medium_3"
                android:paddingTop="@dimen/margin_medium_2"
                android:paddingBottom="@dimen/margin_medium_2"
                android:visibility="visible"
                android:maxLines="3"
                android:maxLength="50"
                android:textColor="@color/black"
                android:textSize="@dimen/text_heading_1x"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/llEtShelfDetail"
            android:id="@+id/tvBookCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_medium_3"
            android:text="5 books"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/text_regular_2x" />

        <View
            android:layout_below="@id/tvBookCount"
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/margin_medium_2"/>

        <include
            android:id="@+id/vpShelfBookList"
            android:layout_below="@id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/view_pod_library_book_list"
            android:layout_marginTop="@dimen/margin_card_medium"/>

    </RelativeLayout>


</androidx.core.widget.NestedScrollView>